# MaaBlackFlow

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: architecture.md  maafw_integration.md  roadmap.md
examples/maps/: basic.json  jump_required.json  no_solution.json
maafw_project/: interface.json
maafw_project/resource/image/: README.md
maafw_project/resource/pipeline/: blackflow.json
src/maablackflow/: __init__.py  cli.py
src/maablackflow/domain/: __init__.py  models.py  movement.py  validation.py
src/maablackflow/integrations/: __init__.py
src/maablackflow/integrations/maafw/: __init__.py  adapter.py  agent.py  offline_template.py  serialization.py  template_evidence.py
src/maablackflow/io/: __init__.py  json_loader.py
src/maablackflow/solver/: __init__.py  planner.py  result.py  scoring.py
src/maablackflow/vision/: __init__.py  dataset.py  detector.py  evaluation.py  grid.py  image_io.py  models.py  output.py  providers.py  templates.py
tests/: test_cli.py  test_json_loader.py  test_maafw_integration.py  test_maafw_offline_template.py  test_maafw_runtime.py  test_planner.py  test_vision_cli.py  test_vision_dataset.py  test_vision_detector.py  test_vision_evaluation.py  test_vision_grid.py  test_vision_templates.py
